# arcsim

./: .gitignore  CMakeLists.txt  arcsim.sh
conf/: abc.json  abc128.json  abc16.json  abc32.json  abc32_cut.json  abc64.json  abcd.json  cylinder0.json  dress-blue.json  dress-blue.json.bak  dress-highres.json  flag.json  sphere_copy.json
doc/1/: template.tex
meshes/: cylinder.vtk  cylinder_cut_0.vtk  cylinder_cut_1.vtk  dress4_dense.vtk  dress4_dense_cut_1.vtk  dress4_dense_cut_2.vtk  dress4_dense_cut_3.vtk  dress_highres.vtk  dress_highres_cut.vtk  flag1.vtk  loop.txt  plane_32x32_cut.vtk  plane_32x32_cut_1.vtk  plane_64x64_cut.vtk  plane_64x64_cut_1.vtk  temp.txt  untitled.vtk
src/: CMakeLists.txt  cloth.hpp  conf.cpp  elasticity.mac  handle.cpp  handle.hpp  io.hpp  main.cpp  physics.cpp  runphysics.cpp  simulation.cpp  taucs.cpp
